<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context="qmplus.com.businesscard.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding10"
            android:layout_marginTop="@dimen/padding10"
            android:background="@drawable/logo" />
        <!-- Start information about the system -->
        <TextView
            android:id="@+id/item1"
            style="@style/systemText"
            android:layout_below="@id/logo"
            android:fontFamily="@font/droidserif_bolditalic"
            android:text="@string/qualitySystem" />

        <TextView
            android:id="@+id/item2"
            style="@style/systemText"
            android:layout_below="@+id/item1"
            android:fontFamily="@font/droidserif_italic"
            android:text="@string/internalControl" />

        <TextView
            android:id="@+id/item3"
            style="@style/systemText"
            android:layout_alignLeft="@+id/item4"
            android:layout_below="@+id/item2"
            android:fontFamily="@font/droidserif_italic"
            android:text="@string/certification" />

        <TextView
            android:id="@+id/item4"
            style="@style/systemText"
            android:layout_below="@id/item3"
            android:fontFamily="@font/droidserif_italic"
            android:text="@string/docManagement" />

        <TextView
            android:id="@+id/item5"
            style="@style/systemText"
            android:layout_below="@id/item4"
            android:fontFamily="@font/droidserif_italic"
            android:text="@string/risk" />
        <!-- End information about the system -->

        <!-- Start information about the company -->
        <TextView
            android:id="@+id/home"
            style="@style/infoText"
            android:layout_below="@id/item5"
            android:layout_marginTop="@dimen/padding50"
            android:autoLink="map"
            android:drawableLeft="@drawable/home"
            android:fontFamily="@font/droidserif_regular"
            android:text="@string/address" />

        <TextView
            android:id="@+id/phone"
            style="@style/infoText"
            android:layout_below="@+id/home"
            android:autoLink="phone"
            android:drawableLeft="@drawable/phone"
            android:fontFamily="@font/droidserif_regular"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/email"
            style="@style/infoText"
            android:layout_below="@+id/phone"
            android:autoLink="email"
            android:drawableLeft="@drawable/email"
            android:fontFamily="@font/droidserif_regular"
            android:text="@string/email" />

        <TextView
            android:id="@+id/website"
            style="@style/infoText"
            android:layout_below="@id/email"
            android:autoLink="web"
            android:drawableLeft="@drawable/www"
            android:fontFamily="@font/droidserif_regular"
            android:text="@string/website" />
        <!-- End information about the company-->
    </RelativeLayout>
</ScrollView>